codepkg/objects/Community_Application__c.object
<CustomObject>
    <fields>
        <fullName>App_Permission_Set_Developer_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>App Permission Set Developer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>APP URL(Relative)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Email_Template__c</fullName>
        <description>Email to send approved Email Template</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Approved Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Logo Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Application</label>
        <referenceTo>Community_Application__c</referenceTo>
        <relationshipLabel>Community Applications</relationshipLabel>
        <relationshipName>Parent_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reject_Email_Template__c</fullName>
        <description>Email send to Reject Email Template</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Reject Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Show_on_Portal__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show on Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Approval_Class__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>User Approval Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <inlineHelpText>For which user this app is applicable?</inlineHelpText>
        <label>User Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FEMA</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>Homeowner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPrivateApp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Its to specify which are private app and need access  internal</description>
        <inlineHelpText>Its to specify which are private app and need access  internal</inlineHelpText>
        <label>Is Private App?</label>
        <type>Checkbox</type>
    </fields>
    <label>Community Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Display_Name__c</columns>
        <columns>isActive__c</columns>
        <columns>Description__c</columns>
        <columns>User_Type__c</columns>
        <columns>Sequence__c</columns>
        <columns>Show_on_Portal__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Community Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>